# RAG-HPO

./: .flake8  .gitignore  .pre-commit-config.yaml  CHPO-2025-4.xlsx  README.md  input.csv  pyproject.toml  setup_environment.py  system_prompts.json
config/: hpo_config_demo.json
data/: hpo_embedded.npz  hpo_meta.json  hpo_terms_full.csv
examples/: README.md
examples/clinical/: case_phase2_input.csv  case_phase2_raw.csv  case_phase2_results.csv  test_cases_qwen.csv  test_cases_sample.csv  test_results_qwen.csv  test_results_qwen_raw.csv
examples/synthetic/inputs/: cases.csv  expected.json
examples/synthetic/outputs/: predictions.csv  raw.csv
rag_hpo/: cli.py  config.py  pipeline.py  utils.py  vectorization.py
scripts/: evaluate_synthetic.py
webapp/: README.md
webapp/backend/: __init__.py  app.py  deps.py  schemas.py  services.py
webapp/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
webapp/frontend/src/: App.vue  styles.css  types.ts
webapp/frontend/src/api/: client.ts
webapp/frontend/src/components/: PasteInput.vue  ResultTable.vue
