[project]
name = "rag-hpo"
version = "0.1.0"
description = "RAG-HPO: Retrieval-Augmented Generation for Human Phenotype Ontology annotation"
authors = [
    { name = "Liyang Zhang", email = "1219187848@qq.com" }
]
readme = "README.md"
requires-python = ">=3.12.9,<3.13"
license = { text = "MIT" }

[tool.poetry.dependencies]
python = ">=3.12.9,<3.13"

# Core Scientific Libraries
numpy = "2.3.4"
pandas = "2.3.3"
scipy = "1.16.2"
scikit-learn = "1.7.2"
statsmodels = "0.14.5"

# Visualization
matplotlib = "3.10.7"
seaborn = "0.13.2"
plotly = "6.3.1"
umap-learn = "0.5.9.post2"

# NLP + Embeddings + LLM Support
faiss-cpu = "1.12.0"
tqdm = "4.67.1"
regex = "2025.10.22"
jsonlines = "4.0.0"
fastembed = "0.7.3"
transformers = "4.57.1"
sentence-transformers = "5.1.1"
tiktoken = "0.12.0"

# Dash App Framework
dash = "3.2.0"
dash-bootstrap-components = "2.0.4"
flask = "3.1.2"

# Excel / CSV Handling
openpyxl = "3.1.5"
xlrd = "2.0.2"
xlsxwriter = "3.2.9"

# Ontology, Graphs, and JSON Parsing
networkx = "3.5"
rdflib = "7.2.1"
jsonschema = "4.25.1"
pronto = "*"

# File & System Utilities
python-dotenv = "1.1.1"

# Data Cleaning & Matching
fuzzywuzzy = "0.18.0"
python-Levenshtein = "0.27.1"
rapidfuzz = "3.14.1"
unidecode = "1.4.0"
ratelimit = "2.2.1"
tabulate = "0.9.0"

# Testing and Debugging
pytest = "8.4.2"
ipython = "9.6.0"
jupyter = "1.1.1"
notebook = "7.4.7"

# Optional (used in RAG workflows)
pyyaml = "6.0.3"
aiohttp = "3.13.1"
tenacity = "9.1.2"
backoff = "2.2.1"
requests = "2.32.5"
httpx = "0.28.1"
openai = "^2.6.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rag-hpo = "rag_hpo.cli:cli"

# -------- Tooling configs --------

[tool.black]
line-length = 150
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3
combine_as_imports = true
include_trailing_comma = true
force_grid_wrap = 0

[tool.ruff]
line-length = 150
target-version = "py312"

[tool.ruff.lint.isort]
known-first-party = ["rag_hpo"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q -ra"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
pretty = true
